[gd_scene load_steps=4 format=3 uid="uid://c86jn7u38l5tx"]

[ext_resource type="Script" path="res://scripts/PlayerUnit.gd" id="1_bc5pg"]
[ext_resource type="PackedScene" path="res://assets/models/X Bot.fbx" id="2_ky7p6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w0fgo"]
radius = 0.5
height = 2.0

[node name="PlayerUnit" type="CharacterBody3D"]
script = ExtResource("1_bc5pg")

[node name="Armature" parent="." instance=ExtResource("2_ky7p6")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_w0fgo")

[node name="UIBillboard" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)

[node name="Nameplate" type="Label3D" parent="UIBillboard"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
billboard = 1
text = "Character"
font_size = 16
outline_size = 4

[node name="Components" type="Node" parent="."]

[node name="CombatComponent" type="Node" parent="Components"]
script_instantiation_script = "res://scripts/CombatComponent.gd"

[node name="AbilityComponent" type="Node" parent="Components"]
script_instantiation_script = "res://scripts/AbilityComponent.gd"
